complete structure of users and posts, implement postgres

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
-spring.profiles.active=hashmap
+spring.profiles.active=persistent
+spring.datasource.url=jdbc:postgresql://localhost:5432/user_posts
+spring.datasource.username=spring_dev
+spring.datasource.password=${SPRING_DEV}
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
+
+spring.h2.console.enabled=true
