--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,6 +1,14 @@
-spring.datasource.url=${SPRING_DATASOURCE_URL}
-spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
-spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
+spring.datasource.url=${USERPOSTS_URL}
+spring.datasource.username=${USERPOST_USERNAME}
 
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+# home password 
+# spring.datasource.password=${USERPOSTS_PASSWORD}
+
+# course password
+spring.datasource.password=
+
+spring.jpa.properties.hibernate.dialect=${USERPOST_DIALECT}
+# spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+
 spring.jpa.hibernate.ddl-auto=update
